# 3D-game-engine

./: .gitignore  CMakeLists.txt  Command.cpp  Command.h  Face.cpp  Face.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectDrawer.cpp  GameObjectDrawer.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  Prefab.cpp  Prefab.h  README.md  ResourceManager.cpp  ResourceManager.h  SBWindow.cpp  SBWindow.h  ShaderProgram.cpp  ShaderProgram.h  Time.cpp  Time.h  Transform.cpp  Transform.h  Vertex.h  main.cpp
Component/: Camera.cpp  Camera.h  Component.cpp  Component.h  PhysicsBody.cpp  PhysicsBody.h
OpenGL/: GLBuffer.cpp  GLBuffer.h  GLMesh.cpp  GLMesh.h  GLMeshDrawer.cpp  GLMeshDrawer.h  GLTexture.cpp  GLTexture.h  GLVertex.h
Scripts/: ControlCamera.cpp  ControlCamera.h  PlayerMovement.cpp  PlayerMovement.h  Script.cpp  Script.h
